--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 			<section class="ftco-section">
-    	<div class="container"> -->
+    	<div class="container"> 
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <!-- <h2 class="mb-4">Articles</h2> -->
