--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Explorer - Free Bootstrap 4 Template by Colorlib</title>
+    <title>about</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -37,37 +37,31 @@
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li class="colorlib-active"><a href="about.html">關於我</a></li>
-          <li><a href="photography.html">書法作品</a></li>
-          <!-- <li><a href="contact.html">聯絡方式</a></li> -->
+          <li><a href="calligraphy.html">書法作品</a></li>
+          <li><a href="robot.html">機械手臂</a></li>
         </ul>
       </nav>
 
       <div class="colorlib-footer">
-        <p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
-         Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> 
-	<!--<ul> 
-          <li><a href="#"><i class="icon-facebook"></i></a></li>
-          <li><a href="#"><i class="icon-twitter"></i></a></li>
-          <li><a href="#"><i class="icon-instagram"></i></a></li>
-          <li><a href="#"><i class="icon-linkedin"></i></a></li>
-        </ul> -->
+        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
       </div>
     </aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<div class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url(images/bg_4.jpg);" data-stellar-background-ratio="0.5">
+			<div class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/image_2.jpg);"></div>
+						<div class="img mb-4" style="background-image: url(images/me.jpg);"></div>
 						<div class="desc">
 							<!-- <h2 class="subheading">Hello I'm</h2> -->
 							<!-- <h1 class="mb-4">Elen Henderson</h1> -->
-							<p class="mb-4" style="color:#000000;"><br>很高興認識你</br>這個網站才剛架設，未來還會持續更新</p>
-							<ul class="ftco-social mt-3">
-                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
-                <!-- <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li> -->
-                <!-- <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li> -->
-              </ul>
+							<p class="mb-4" style="color:#000000;">我是黃建齊，就讀於東勢國小、私立美和高中國高中部，這是我的個人網站，記錄我從小到大的學習歷程、興趣、以及一些作品。小時候媽媽讓我學書法，為了讓我的字端正及心靜一點，沒想到我現在硬筆字還是寫得歪七扭八呢！從小我就對樂高很有興趣，很愛自己組裝東西，沒想到有一天真的組出一具機械手臂，還能通過電路板、Arduino操控，令我非常有成就感。同時，我也對軟體有興趣，因此在高二暑假開始了我的個人網頁，自己上網學習，將這些小確幸紀錄在這裡。</p>
+							<!-- <ul class="ftco-social mt-3">
+                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+              </ul> -->
 						</div>
 					</div>
 				</div>
